--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/styles/css/app.css">
     <link rel="stylesheet" class="color-switcher" href="assets/styles/css/app.css">
-    <link rel="stylesheet" href="assets/styles/css/style.css">
+    <link rel="stylesheet" href="assets/styles/css/app-red.css">
 
     
     <!-- Modernizr -->
